# PreRect

./: .gitignore  .travis.yml  README.md  android.travis.yml  build.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/aheadle/camerapreview/: ApplicationTest.java
app/src/androidTest/java/com/knjin/camerapreview/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Yuv2Rgb.c
app/src/main/java/com/aheadle/camerapreview/: MainActivity.java
app/src/main/java/com/aheadle/camerapreview/activity/: FaceActivity.java  MainActivity.java  PushActivity.java
app/src/main/java/com/aheadle/camerapreview/camera/: FaceDetect.java
app/src/main/java/com/aheadle/camerapreview/model/: Face.java
app/src/main/java/com/aheadle/camerapreview/util/: BitmapOperate.java  CircularAnimUtil.java  GoogleGetFace.java
app/src/main/java/com/aheadle/camerapreview/view/: CameraSurfaceView.java  FaceRectView.java
app/src/main/java/com/jing/prerect/activity/: CameraActivity.java  FaceActivity.java  MainActivity.java  PushActivity.java
app/src/main/java/com/jing/prerect/callback/: OnCaptureCallback.java
app/src/main/java/com/jing/prerect/camera/: CameraConfigurationManager.java  CameraInterface.java  (+2 more)
app/src/main/res/layout/: activity_camera.xml  activity_face.xml  activity_main.xml  activity_push.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/aheadle/camerapreview/: ExampleUnitTest.java
app/src/test/java/com/knjin/camerapreview/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+71 files in other folders)
